# vcpi-prediction-contest-2026

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: _verify_training_data.py  baseline_audit.py  baseline_audit_real.py  build_bundled_gene_filter.py  build_canonical_assets.py  enrich_test_compounds_with_chemistry.py  rekey_test_compounds.py
src/vcpi_prediction_contest/: __init__.py  baselines.py  data.py  expression.py  metrics.py  weights.py
src/vcpi_prediction_contest/data_files/: __init__.py  gene_filter.csv  test_compounds.csv
tests/: test_baselines.py  test_data.py  test_expression.py  test_fetch_weights.py  test_metrics.py  test_weights.py
